--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.rosst.Seventh">
 
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,7 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.example.rosst.Seventh.MainActivity">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -18,13 +19,15 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.example.rosst.Seventh.Main4Activity"
-            android:parentActivityName="com.example.rosst.Seventh.MainActivity" />
+            android:name=".Main4Activity"
+            android:parentActivityName=".MainActivity" />
         <activity
-            android:name="com.example.rosst.Seventh.Main5Activity"
-            android:parentActivityName="com.example.rosst.Seventh.MainActivity" />
-        <meta-data android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyBfg-L72CZwKSx9a5moE-hZYcT-Y5cQpA8"/>
+            android:name=".Main5Activity"
+            android:parentActivityName=".MainActivity" />
+
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyBfg-L72CZwKSx9a5moE-hZYcT-Y5cQpA8" />
     </application>
 
 </manifest>
